finished for demo!!!

--- a/www/sites/food.html
+++ b/www/sites/food.html
@@ -25,39 +25,15 @@
 <body>
 
 <div id="everything" class="content-info">
-    <a href="../index.html" style="text-decoration: none">
-        <div class="header_fixed">
+    <a href="../index.html" style="color: white; text-decoration: none;">
+        <div class="header_div" style="color: white">
             <img src="../img/max/arrow_left_back.gif" class="header_arrow_back"/>
             Food
         </div>
-    </a>
-    <div class="container-fluid">
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
-        <div class="row">
-            <a>
-                <div class="col-xs-12 food_container">Salzburger Brezeln<img src="../img/max/arrow_right.gif" class="arrow_right"/>
-                </div>
-            </a>
-        </div>
 
-    </div>
+    </a>
+    <div class="row alphabet" style=" margin-top: 60px; height: 200px; font-size: 50px; font-family: elfFont; text-align: center; border-bottom: none; line-height:100px">Cooming <br> Soon!</div>
+
 
 </div>
 
