--- a/www/sites/stages/clubcircus.html
+++ b/www/sites/stages/clubcircus.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mainstage</title>
+    <title>ClubCircus</title>
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -33,160 +33,203 @@
         mit Techno bespielt wird. Am Line Up stehen da zum Beispiel Adam Beyer, Len Faki, Mark Knight uvm.
     </div>
     <ul class="nav nav-pills" style="margin-bottom: 5px;">
-        <li class="active col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
-        <li class="col-xs-6 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
+
+        <li class="active col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
+        <li class="col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+        <li class="col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
 
     </ul>
 
+
     <div class="tab-content" id="container">
-        <div id="friday" class="tab-pane fade in active">
+        <div id="wednesday" class="tab-pane fade in active">
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Kyma</div>
+                <div class="a_name">Trioside</div>
                 <hr class="a_hr">
-                <div class="a_info">12:00 - 13:30</div>
-                <div class="a_info">Club Circus</div>
+                <div class="a_info">18:00 - 19:00</div>
+                <div class="a_info">Q-Dance Stage</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Dominik Bagari</div>
+                <div class="a_name">Maxxive</div>
                 <hr class="a_hr">
-                <div class="a_info">13:30 - 15:00</div>
-                <div class="a_info">Club Circus</div>
+                <div class="a_info">19:00 - 20:00</div>
+                <div class="a_info">Q-Dance Stage</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Jean Philippe</div>
+                <div class="a_name">Benjamin Zane</div>
                 <hr class="a_hr">
-                <div class="a_info">15:00 - 17:00</div>
-                <div class="a_info">Club Circus</div>
-            </div>
-            <div class="row_container">
-                <div class=""><img src="../../img/djs_head/lost_frequencies.jpg" class="a_img"></div>
-                <div class="a_name">Lost Frequencies</div>
-                <hr class="a_hr">
-                <div class="a_info">17:00 - 18:00</div>
-                <div class="a_info">Club Circus</div>
+                <div class="a_info">20:00 - 22:00</div>
+                <div class="a_info">Q-Dance Stage</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Denggalengg</div>
+                <div class="a_name">Chris Gomez</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Philipp Cue</div>
+                <hr class="a_hr">
+                <div class="a_info">23:00 - 00:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/felice.jpg" class="a_img"></div>
+                <div class="a_name">Felice</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 01:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/r3hab.jpg" class="a_img"></div>
+                <div class="a_name">R3hab</div>
+                <hr class="a_hr">
+                <div class="a_info">01:00 - 02:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/deorro.jpg" class="a_img"></div>
+                <div class="a_name">Deorro</div>
+                <hr class="a_hr">
+                <div class="a_info">02:00 - 03:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Valentiano Sanchez</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">Q-Dance Stage</div>
+            </div>
+        </div>
+        <div id="friday" class="tab-pane fade">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">DropShop</div>
                 <hr class="a_hr">
                 <div class="a_info">18:00 - 19:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/flic_flac.jpg" class="a_img"></div>
-                <div class="a_name">Flic Flac</div>
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Subsurface</div>
                 <hr class="a_hr">
                 <div class="a_info">19:00 - 20:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/thomas_jack.jpg" class="a_img"></div>
-                <div class="a_name">Thomas Jack</div>
+                <div class=""><img src="../../img/djs_head/west_mb.jpg" class="a_img"></div>
+                <div class="a_name">West MB</div>
                 <hr class="a_hr">
                 <div class="a_info">20:00 - 21:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/watermat.jpg" class="a_img"></div>
-                <div class="a_name">Watermät</div>
+                <div class=""><img src="../../img/djs_head/jaguar_skills.jpg" class="a_img"></div>
+                <div class="a_name">Jaguar Skillz</div>
                 <hr class="a_hr">
                 <div class="a_info">21:00 - 22:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Scheinizzl</div>
+                <div class=""><img src="../../img/djs_head/pegboard_nerds.jpg" class="a_img"></div>
+                <div class="a_name">Pegboard Nerds</div>
                 <hr class="a_hr">
-                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">22:00 - 23:30</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Max Manie</div>
+                <div class=""><img src="../../img/djs_head/sub_focus.jpg" class="a_img"></div>
+                <div class="a_name">Subfocus (DJ Set)</div>
                 <hr class="a_hr">
-                <div class="a_info">23:00 - 00:00</div>
+                <div class="a_info">23:30 - 01:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
-
-
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/pendulum.jpg" class="a_img"></div>
+                <div class="a_name">Pendulum (DJ Set)</div>
+                <hr class="a_hr">
+                <div class="a_info">01:00 - 02:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/chase_and_status.jpg" class="a_img"></div>
+                <div class="a_name">Chase & Status (DJ Set)</div>
+                <hr class="a_hr">
+                <div class="a_info">02:30 - 04:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
         </div>
         <div id="saturday" class="tab-pane fade">
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Chroph</div>
+                <div class="a_name">Kystow</div>
                 <hr class="a_hr">
-                <div class="a_info">12:00 - 13:00</div>
+                <div class="a_info">18:00 - 19:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Konstant</div>
+                <div class="a_name">Jonny Be</div>
                 <hr class="a_hr">
-                <div class="a_info">13:00 - 14:00</div>
+                <div class="a_info">19:00 - 20:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">Royal Ruv</div>
+                <div class="a_name">Hannes Buniic</div>
                 <hr class="a_hr">
-                <div class="a_info">14:00 - 15:30</div>
+                <div class="a_info">20:00 - 21:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
                 <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
-                <div class="a_name">TRBS Bund</div>
-                <hr class="a_hr">
-                <div class="a_info">15:30 - 17:00</div>
-                <div class="a_info">Club Circus</div>
-            </div>
-            <div class="row_container">
-                <div class=""><img src="../../img/djs_head/spada.jpg" class="a_img"></div>
-                <div class="a_name">Spada</div>
-                <hr class="a_hr">
-                <div class="a_info">17:00 - 18:30</div>
-                <div class="a_info">Club Circus</div>
-            </div>
-            <div class="row_container">
-                <div class=""><img src="../../img/djs_head/peer_kusiv.jpg" class="a_img"></div>
-                <div class="a_name">Peer Kusiv</div>
-                <hr class="a_hr">
-                <div class="a_info">18:30 - 19:30</div>
-                <div class="a_info">Club Circus</div>
-            </div>
-            <div class="row_container">
-                <div class=""><img src="../../img/djs_head/nico_pusch.jpg" class="a_img"></div>
-                <div class="a_name">Nico Pusch & Tom Pusch</div>
-                <hr class="a_hr">
-                <div class="a_info">19:30 - 21:00</div>
-                <div class="a_info">Club Circus</div>
-            </div>
-            <div class="row_container">
-                <div class=""><img src="../../img/djs_head/faul__wad_ad.jpg" class="a_img"></div>
-                <div class="a_name">Faul & Wad Ad</div>
+                <div class="a_name">Pete Sabo</div>
                 <hr class="a_hr">
                 <div class="a_info">21:00 - 22:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/felix_jaehn.jpg" class="a_img"></div>
-                <div class="a_name">Felix Jahn</div>
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Steve Looney</div>
                 <hr class="a_hr">
                 <div class="a_info">22:00 - 23:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
             <div class="row_container">
-                <div class=""><img src="../../img/djs_head/robin_schulz.jpg" class="a_img"></div>
-                <div class="a_name">Robin Schulz</div>
+                <div class=""><img src="../../img/djs_head/timo_maas.jpg" class="a_img"></div>
+                <div class="a_name">Timo Maas</div>
                 <hr class="a_hr">
                 <div class="a_info">23:00 - 00:00</div>
                 <div class="a_info">Club Circus</div>
             </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/mark_knight.jpg" class="a_img"></div>
+                <div class="a_name">Mark Knight</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 01:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/len_faki.jpg" class="a_img"></div>
+                <div class="a_name">Len Faki</div>
+                <hr class="a_hr">
+                <div class="a_info">01:00 - 02:30</div>
+                <div class="a_info">Club Circus</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/adam_beyer.jpg" class="a_img"></div>
+                <div class="a_name">Adam Beyer</div>
+                <hr class="a_hr">
+                <div class="a_info">02:30 - 04:00</div>
+                <div class="a_info">Club Circus</div>
+            </div>
         </div>
-
-
     </div>
 
 </div>
