--- a/www/sites/stages/heineken.html
+++ b/www/sites/stages/heineken.html
@@ -13,14 +13,12 @@
 
 <body>
 <div id="everything" class="content-info">
-    <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-        <a href="" style="text-decoration: none;" class="js">
-            <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Heineken - Starclub
-            </div>
-        </a>
-    </div>
+    <a href="../stages.html" style="text-decoration: none">
+        <div class="row header_fixed">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+            <em class="header_text">Heineken</em>
+        </div>
+    </a>
     <div class="stage_info container-fluid">
         Völlig neu am Electric Love ist der Heineken
         Starclub, ein voll ausgestatteter Club direkt am
@@ -28,6 +26,207 @@
         von ca. 800 Personen. Resident DJs aus den lässigsten
         Clubs Europas, female DJs und Acts mit Live Performance
         werden das Programm des Heineken Starclubs dominieren.
+    </div>
+
+    <ul class="nav nav-pills" style="margin-bottom: 5px;">
+        <li class="active col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#wednesday">WED</a></li>
+        <li class="active col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#friday">FRI</a></li>
+        <li class="col-xs-4 pill"><a data-toggle="pill" class="tt_tab" href="#saturday">SAT</a></li>
+
+    </ul>
+
+    <div class="tab-content" id="container">
+        <div id="wednesday" class="tab-pane fade in active">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Danny Twice</div>
+                <hr class="a_hr">
+                <div class="a_info">18:00 - 20:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Robert Zagorakis</div>
+                <hr class="a_hr">
+                <div class="a_info">20:00 - 22:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">DJ Observer </div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 00:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Joachim Garraud</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 01:30</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">I Punk</div>
+                <hr class="a_hr">
+                <div class="a_info">01:30 - 04:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+        </div>
+        <div id="friday" class="tab-pane fade">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Benjamin Dibora</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 14:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Faxtreme</div>
+                <hr class="a_hr">
+                <div class="a_info">14:00 - 16:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">2 Elements</div>
+                <hr class="a_hr">
+                <div class="a_info">16:00 - 17:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Selecta</div>
+                <hr class="a_hr">
+                <div class="a_info">17:00 - 18:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Modul Kollektiv</div>
+                <hr class="a_hr">
+                <div class="a_info">18:00 - 20:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Chris Noble</div>
+                <hr class="a_hr">
+                <div class="a_info">20:00 - 21:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Max Hizzle</div>
+                <hr class="a_hr">
+                <div class="a_info">21:00 - 22:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Falko Niestolik</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 23:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Danny La Vega</div>
+                <hr class="a_hr">
+                <div class="a_info">23:00 - 00:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Tom Snow</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 02:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">DJ MKS</div>
+                <hr class="a_hr">
+                <div class="a_info">02:00 - 04:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+        </div>
+
+
+        <div id="saturday" class="tab-pane fade">
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Chris Armada</div>
+                <hr class="a_hr">
+                <div class="a_info">12:00 - 14:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Bauernjohnny & Reneer</div>
+                <hr class="a_hr">
+                <div class="a_info">14:00 - 15:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">SM3</div>
+                <hr class="a_hr">
+                <div class="a_info">15:00 - 16:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Oliver Pum</div>
+                <hr class="a_hr">
+                <div class="a_info">16:00 - 17:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Selecta</div>
+                <hr class="a_hr">
+                <div class="a_info">17:00 - 18:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Dan Lee</div>
+                <hr class="a_hr">
+                <div class="a_info">18:00 - 20:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Anady</div>
+                <hr class="a_hr">
+                <div class="a_info">20:00 - 22:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Flo Yao</div>
+                <hr class="a_hr">
+                <div class="a_info">22:00 - 00:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Paul Blaze</div>
+                <hr class="a_hr">
+                <div class="a_info">00:00 - 02:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+            <div class="row_container">
+                <div class=""><img src="../../img/djs_head/noname.jpg" class="a_img"></div>
+                <div class="a_name">Suprise Aftershow</div>
+                <hr class="a_hr">
+                <div class="a_info">02:00 - 04:00</div>
+                <div class="a_info">Heineken Star-Club</div>
+            </div>
+
+        </div>
     </div>
 </div>
 
