--- a/www/sites/stages/qdance.html
+++ b/www/sites/stages/qdance.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mainstage</title>
+    <title>Q-Dance</title>
     <link rel="stylesheet" href="../../css/bootstrap.min.css">
     <link rel="stylesheet" href="../../css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="../../css/styles.css">
@@ -13,14 +13,12 @@
 
 <body>
 <div id="everything" class="content-info">
-    <div class="row" style="padding: 0; margin: 0 0 5px 0; ">
-        <a href="" style="text-decoration: none;" class="js">
-            <div class="col-xs-12 header_div" onclick="history.go(-1);return true;" style="padding: 0">
-                <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back"/>
-                Q-Dance
-            </div>
-        </a>
-    </div>
+    <a href="../stages.html" style="text-decoration: none">
+        <div class="row header_fixed">
+            <img src="../../img/max/arrow_left_back.gif" class="header_arrow_back" style="margin: 5px -70px 0 10px; "/>
+            <em class="header_text">Q-Dance</em>
+        </div>
+    </a>
     <div class="stage_info container-fluid">
         Q-Dance will bring the incomparable experience of the
         lion stage to austria and top it off with an amazing light and
